fix article card aspect-ratio on mobile

--- a/assets/css/component/card.css
+++ b/assets/css/component/card.css
@@ -161,7 +161,7 @@ ul.pagination {
 
     .feed-item > section {
         flex-direction: column;
-        aspect-ratio: unset;
+        aspect-ratio: unset !important;
     }
 
 }
